Some  minor code cleanup, fixing some of the complaints generated by findBug
git-svn-id: svn+ssh://svn.code.sf.net/p/cmusphinx/code/trunk/sphinx4@4010 94700074-3cef-4d97-a70e-9c8c206c02f5